# tsmarker

./: .env.example  .gitignore  AGENTS.md  Jenkinsfile  LLM_MODULE_DESIGN.md  README.md  SPEECH_MODULE_DESIGN.md  install.cmd  pyproject.toml  setup.py
notebooks/: BERTで日本語テキストの感情分析(Tensorflow版).ipynb  Canny Edge Detection in OpenCV.ipynb  Keras BERT Japanese.ipynb  Training data for speech marker.ipynb
tests/: __init__.py  test_common.py  test_ensemble.py  test_marker.py
tsmarker/: __init__.py  clipinfo.py  common.py  ensemble.py  ffmpeg.py  groundtruth.py  logo.py  marker.py  pipeline.py  subtitles.py
tsmarker/speech/: MarkerMap.py  __init__.py  __main__.py  dataset.py  llm_client.py  prompt_engine.py  text_extractor.py
